releaseb performance improvements